<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        app:key="handling_options"
        app:title="@string/handling_options">
        <SwitchPreferenceCompat
            app:key="hardware_buttons"
            app:defaultValue="true"
            app:icon="@drawable/ic_expand_bundle"
            app:summary="@string/summary_use_hardware_buttons"
            app:title="@string/title_use_hardware_buttons" />
        <SwitchPreferenceCompat
            app:key="vibration"
            app:icon="@drawable/ic_audio_ring_notif_vibrate"
            app:defaultValue="false"
            app:title="@string/title_use_vibration" />

    </PreferenceCategory>
    <PreferenceCategory
        app:key="layout_options"
        app:title="@string/layout_options">>
        <SwitchPreferenceCompat
            app:key="is_dark"
            app:icon="@drawable/ic_nights_stay_24px"
            app:defaultValue="false"
            app:title="@string/use_dark_theme" />
    </PreferenceCategory>

</PreferenceScreen>